# ms-circuit-video-game

./: .gitignore  .gitmodules  LICENSE  README.md  general-project-requirements.md
console-hardware/render-module-hardware/usb-to-pc-graphics-render-circuit/: usb-to-pc-graphics-render-circuit.kicad_prl  usb-to-pc-graphics-render-circuit.kicad_pro  usb-to-pc-graphics-render-circuit.kicad_sch
console-hardware/system-hardware/ltspice-test-circuits/: neg-voltage-rail.asc
console-hardware/system-hardware/ms-circuit-system-console-base-circuit/: ms-circuit-system-console-base-circuit.kicad_prl  ms-circuit-system-console-base-circuit.kicad_pro  ms-circuit-system-console-base-circuit.kicad_sch
games/switched-tag/: switched-tag-readme.md
games/switched-tag/analog-module/: switched-tag-analog-circuit-BOM.xls
games/switched-tag/analog-module/ltspice-circuit/: .gitignore  collision-detection-simple.asc  switched-tag-v2.asc  switched-tag.asc
games/switched-tag/analog-module/pcb/: switched-tag-symbol-lib.kicad_sym
games/switched-tag/analog-module/simulation/: attack-mechanic.asc  collision-detection-simple.asc  it-player-determination.asc  pendelum-model.asc  remove-plots.sh  switched-tag-v2.asc
games/switched-tag/digital-module-code/sbc-code/: sbc-pseudo-code.txt
games/switched-tag/digital-module-code/uController-to-pc/: ADC-pinout-stm32-nucleo-f446ret.docx  microcontroller-pseudo-code.txt
games/switched-tag/digital-module-code/uController-to-pc/pc-uart-to-render/: CMakeLists.txt  README-render-pc-uart-switchedtag.md
games/switched-tag/digital-module-code/uController-to-pc/pc-uart-to-render/src/: main.cpp  moving_average.h
games/switched-tag/logic-circuit/: .~lock.switched-tag-analog-circuit-BOM.xls#  switched-tag-analog-circuit-BOM.xls
games/switched-tag/logic-circuit/ltspice-circuit/: remove-plots.sh  (+5 more)
spice-models/: 1N914.lib  ada4692.mod  lmx58_lm2904.dsn  lmx58_lm2904.lib  lmx58_lm2904.libsig  lmx58_lm2904.opj  rul035n02.lib
test-circuits/ltspice-circuits/: .gitignore  collision-detector-1d.asc  collision-detector-2d-add-sub.asc  joystick-time-dependent-movement.asc  sample-and-hold.asc  sample-and-hold.op.raw  sample-and-hold.plt  sample-and-hold.raw  summer.asc  zero-crossing-detector-derivative.asc
(+43 files in other folders)
